--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,13 @@ dist.jar=${dist.dir}/MatricesString.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.46.jar=C:\\Users\\YO\\Desktop\\BD_Alumnos\\driver-connector\\mysql-connector-java-5.1.46.jar
+file.reference.mysql-connector-java-8.0.15.jar=mysql-connector-java-8.0.15.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.46.jar}:\
+    ${file.reference.mysql-connector-java-8.0.15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=matricesstring.MostrarDatos
+main.class=matricesstring.InicioMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
